# exercises-chapter-8

./: .gitignore  exercises_chapter_8.ipynb  pyproject.toml  setup.cfg
.github/classroom/: autograding.json
scripts/: __init__.py  tests_report_mfe.py
