[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chapter-8"
version = "0.1"
dependencies = ["numpy", "ipython"]

[project.optional-dependencies]
all = [
    "flake8",
    "pep8-naming",
    "flake8-docstrings",
    "pytest",
    "pandas",
    "ipdb",
    "debugpy",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

